# QuPDE

./: .coveragerc  .gitignore  README.md  pyproject.toml  quick_testing.py  qupde_usage_examples.ipynb
.github/workflows/: ci.yml
examples/: Batch_chromatography.py  KDV.py  allen_cahn_equation.py  batch_chromatography_no_c.py  brusselator_system.py  cahn_hilliard_equation.py  compacton_equations.py  dym_equation.py  euler_equations.py  fitz-hugh-nagamo.py  gray_scott_equations.py  isentropic_gas.py  nonlinear_heat_equation.py  porous_medium_equation.py  schlogl_model.py  schnakenberg_equations.py  schrodinger_equation.py  solar_wind.py  swift_hohenberg.py  tubular_reactor.py  tubular_reactor_arrhenius.py
qupde/: .gitignore  __init__.py  cli.py  cli_examples.py  cli_parsing.py  examples_registry.py  fraction_decomp.py  mon_heuristics.py  pde_sys.py  quadratization.py  quadratize.py  rat_sys.py  search_quad.py  utils.py  verify_quad.py
qupde/cli/: __init__.py  constants.py  errors.py  examples.py  main.py  parsing.py  service.py
qupde/examples/: KDV.py  allen_cahn_equation.py  brusselator_system.py  cahn_hilliard_equation.py  compacton_equations.py  dym_equation.py  euler_equations.py  fitz-hugh-nagamo.py  gray_scott_equations.py  nonlinear_heat_equation.py  porous_medium_equation.py  schlogl_model.py  schnakenberg_equations.py  schrodinger_equation.py  solar_wind.py  swift_hohenberg.py  tubular_reactor.py  tubular_reactor_arrhenius.py
tests/: test_frac_pdes.py  test_quadratization.py  test_utils.py  time_experiment.py  toy_examples.py
