[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qupde"
version = "1.0.0"
description = "Python library that finds an optimal and monomial quadratic transformation (quadratization) for nonquadratic PDEs."
authors = [
    { name = "Albani Olivieri", email = "albaniolivieri@gmail.com" }, 
    { name = "Gleb Pogudin", email = "gleb.pogudin@polytechnique.edu" }
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "sympy>=1.5.0"
]

[project.urls]
"Homepage" = "https://github.com/albaniolivieri/QuPDE"
"Issue Tracker" = "https://github.com/albaniolivieri/QuPDE/issues"
"Repository" = "https://github.com/albaniolivieri/QuPDE"
