[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qupde"
version = "1.0.0"
description = "Python library that finds an optimal and monomial quadratic transformation (quadratization) for nonquadratic PDEs."
authors = [
    { name = "Albani Olivieri", email = "albaniolivieri@gmail.com" }, 
    { name = "Gleb Pogudin", email = "gleb.pogudin@polytechnique.edu" }
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "sympy>=1.5.0",
    "typer>=0.20.1",
]

[project.scripts]
qupde = "qupde.cli:app"
check-examples = "qupde.examples_registry:_print_examples"

[project.urls]
"Homepage" = "https://github.com/albaniolivieri/QuPDE"
"Issue Tracker" = "https://github.com/albaniolivieri/QuPDE/issues"
"Repository" = "https://github.com/albaniolivieri/QuPDE"

[dependency-groups]
dev = [
    "ruff>=0.14.9",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
addopts = "--cov=qupde --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["qupde"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.setuptools.packages.find]
include = ["qupde*"]
